--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -4,7 +4,7 @@
       <div class="container">
         <div class="col s12">
           <div class="center white-text">
-            {{ site.copyright }}
+            Copyright &copy; {{ 'now' | date: "%Y" }}
           </div>
         </div>
       </div>
