--- a/_includes/top.html
+++ b/_includes/top.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="/css/global.css">
+    {% if page.printable %}
+      <link type="text/css" rel="stylesheet" href="/css/printable.css">
+    {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
@@ -31,3 +34,9 @@
     </header>
     <main>
       <div class="container">
+        {% if page.printable %}
+          <div class="printable">
+            <h2>{{ page.heading }}</h2>
+            <hr />
+          </div>
+        {% endif %}
