--- a/css/printable.scss
+++ b/css/printable.scss
@@ -6,6 +6,10 @@
 }
 
 @media print {
+  @page {
+    size: auto;
+    margin: 20mm 10mm 15mm 10mm;
+  }
   body {
     & > *:not(main) {
       display: none;
