--- a/_includes/top.html
+++ b/_includes/top.html
@@ -3,7 +3,7 @@
   <head>
     <title>{{ site.title }}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="/css/global.css">
     {% if page.printable %}
       <link type="text/css" rel="stylesheet" href="/css/printable.css">
