Make header clickable

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -19,10 +19,12 @@
             {% include nav.html %}
           </ul>
           <div class="container">
-            <div class="logo center">
-              <h1>{{ site.title }}</h1>
-              <h2>{{ site.subtitle }}</h2>
-            </div>
+            <a href="/">
+              <div class="logo center">
+                <h1>{{ site.title }}</h1>
+                <h2>{{ site.subtitle }}</h2>
+              </div>
+            </a>
             <div class="row hide-on-small-and-down bottom-line">
               <ul class="left">
                 {% include nav.html %}
