Redirect to danieljbclarke.github.io

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -3,6 +3,8 @@
   <head>
     <title>{{ site.title }}: {{ page.title }}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="refresh" content="0; URL=https://danieljbclarke.github.io/">
+    <link rel="canonical" href="https://danieljbclarke.github.io/">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="/css/global.css">
     {% if page.printable %}
